<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friend"
            android:icon="@drawable/icon_friends"
            android:title="@string/action_friends" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/icon_username"
            android:title="@string/action_contacts" />
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/icon_logout"
                android:title="@string/action_logout"/>
        </menu>
    </item>
</menu>