<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bakcground_login"
    android:orientation="vertical"
    android:gravity="center|center_vertical"
    tools:context=".Login.SignIn">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:orientation="vertical"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_email"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/frame_textview"
            android:layout_marginVertical="8dp"
            android:layout_gravity="center"
            android:hint="Nhập Email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/light_grey"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_password"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/grey"/>
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="@drawable/frame_textview"
            android:layout_marginVertical="8dp"
            android:layout_gravity="center"
            android:hint="Nhập mật khẩu"
            android:textColorHint="@color/light_grey"
            android:inputType="textPassword"
            />
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nhớ mật khẩu"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                android:id="@+id/cbRememberPassword"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginBottom="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="Chưa có tài khoản,"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                />
            <TextView
                android:id="@+id/tvClickToSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:text="@string/button_signup"
                android:textSize="15sp"
                android:textStyle="bold|italic"
                android:textColor="@color/white"
                android:clickable="true"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ngay"
                android:textSize="15sp"
                android:textStyle="bold"
                android:textColor="@color/grey"
                />
        </LinearLayout>
        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:text="@string/button_signin"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:backgroundTint="@color/primary"
            app:cornerRadius="10dp"/>
    </LinearLayout>
</LinearLayout>