<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".View.MyProfile">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/primary"
        android:theme="@style/AppTheme.Toolbar"
        android:id="@+id/toolbar_Myprofile"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="20dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civMyAvatar"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/default_avatar" />
            <ImageButton
                android:id="@+id/btnUpdateAvatar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/button_update_avatar"
                android:src="@drawable/icon_update_avatar"
                android:layout_alignBottom="@id/civMyAvatar"
                android:layout_alignEnd="@id/civMyAvatar"
                android:layout_above="@id/civMyAvatar"
                android:layout_marginEnd="10dp"
                android:clickable="true"
                android:contentDescription="@string/description_updateAvatar" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/text_username"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/icon_username" />

                <TextView
                    android:id="@+id/tvMyUserName"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/frame_textview"
                    android:gravity="center_vertical"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="37dp"
                android:layout_marginBottom="3dp"
                android:gravity="center"
                android:text="@string/text_email"
                android:textColor="@color/grey"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/icon_contact_mail" />

                <TextView
                    android:id="@+id/tvMyEmail"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:background="@drawable/frame_textview"
                    android:gravity="center_vertical"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>